[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biobricks"
version = "0.2.0"
authors = [
  { name="Jose A. Jaramillo", email="jjv@utp.edu.co" },
  { name="Thomas Luechtefeld", email="tom@insilica.co" }
]
description = "Biobricks automates bioinformatics data."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'dvc[all]',
  'pytest-cov==4.0.0',
  'logger==1.4',
  'click==8.1.3',
  'cloup ~= 2.0.0',
  "GitPython==3.1.37"
]

[project.urls]
"Homepage" = "https://github.com/biobricks-ai/biobricks"
"Bug Tracker" = "https://github.com/biobricks-ai/biobricks/issues"

[project.scripts]
biobricks = "biobricks.cli:cli"