[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biobricks"
version = "0.3.10"
authors = [
  { name="Thomas Luechtefeld", email="tom@insilica.co" },
  { name="Jose A. Jaramillo", email="jjv@utp.edu.co" }
]
description = "Biobricks automates bioinformatics data."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'click>=8.1.3',
  'requests>=2.0.0', 
  'cloup>=3.0.0',
  'PyYAML>=6.0.1',
  'tqdm>=4.0.0'
]

[project.urls]
"Documentation" = "https://docs.biobricks.ai"
"Bug Tracker" = "https://github.com/biobricks-ai/biobricks/issues"

[project.scripts]
biobricks = "biobricks.cli:cli"
